Updating for E2E testing framework
